envoy-gateway/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: home-lab
  namespace: home-lab
  labels:
    example: http-routing
spec:
  gatewayClassName: home-lab
  listeners:
    - name: http
      protocol: HTTP
      port: 80
